# comfy-noodles

./: .envrc.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  publish_node.yml
docs/ltx/: lat2vid.md
src/noodles/: __init__.py  comfy.py  extension.py  misc.py  routes.py  utils.py
src/noodles/ltx/: __init__.py  common.py  i2v.py  io.py  l2v.py  paths.py
tests/: __init__.py  conftest.py  test_load_extension.py  test_noodles.py
web/js/: noodles.js
