[project]
name = "comfy-noodles"
version = "0.1.0"
description = "neggles custom comfy nodes."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Andi Powers-Holmes", email = "aholmes@omnom.net" },
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "python-ulid>=3.1.0",
]

[project.urls]
Repository = "https://github.com/neggles/comfy-noodles"
BugTracker = "https://github.com/neggles/comfy-noodles/issues"
Documentation = "https://github.com/neggles/comfy-noodles/wiki"

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.7.3",
]
ci = [
    "comfy-noodles[docs]", # include docs dependencies in ci group so that docs build will work in CI
]

# duplication so that uv sync and uv pip install will both work. sigh
[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
    "coverage>=7.13.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
docs = [
    "mkdocs-material>=9.7.3",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"


[tool.uv]
required-version = ">=0.10.4" # the uv github action will respect this
torch-backend = "auto"        # only affects `uv pip` commands

[tool.uv.build-backend]
module-name = "noodles"


[tool.ruff]
line-length = 140
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E4",   # ruff defaults, pycodestyle errors
    "E7",   # ^^
    "E9",   # ^^
    "F",    # ruff defaults, pyflakes rules
    "B",    # flake8-bugbear
    "UP",   # pyupgrade rules
    "EXE",  # flake8-executable (checks shebangs)
    "PTH",  # flake8-use-pathlib (checks for os.path usage)
    "S101", # do not use assert
    "S102", # do not use exec/eval
    "NPY",  # numpy rules
    "PD",   # pandas rules
]
ignore = [
    "E501", # line too long (handled by line-length)
    "B905", # zip without explicit strict=
]
unfixable = [
    "B", # flake8-bugbear autofixes can be unsafe, so disable those autofixes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["noodles"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]


[tool.comfy]
PublisherId = "neggles"
DisplayName = "noodles (by neggles)"
Icon = "https://github.com/neggles/comfy-noodles/raw/refs/heads/main/assets/noodles.png"
Tags = []
requires-comfyui = ">=0.15.0"
includes = ["web/"]
