[project]
name = "comfy-noodles"
version = "0.1.0"
description = "neggles custom comfy nodes."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Andi Powers-Holmes", email = "aholmes@omnom.net" },
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "python-ulid>=3.1.0",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "torchaudio>=0.25.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[project.urls]
Repository = "https://github.com/neggles/comfy-noodles"
BugTracker = "https://github.com/neggles/comfy-noodles/issues"
Documentation = "https://github.com/neggles/comfy-noodles/wiki"

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.7.3",
]
ci = [
    "comfy-noodles[docs]", # include docs dependencies in ci group so that docs build will work in CI
]
dev = [
    "bump-my-version>=1.2.7",
    "coverage>=7.13.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

# duplication so that uv sync and uv pip install will both work. sigh
[dependency-groups]
dev = [
    "comfy-noodles[dev]", # include dev dependencies in dev group
    "comfy-noodles[ci]",  # include ci group (and thus docs group) in dev group
]
docs = [
    "comfy-noodles[docs]", # include docs dependencies in docs group
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"


[tool.uv]
required-version = ">=0.10.4" # the uv github action will respect this
torch-backend = "auto"        # only affects `uv pip` commands

[tool.uv.build-backend]
module-name = "noodles"

[tool.uv.sources]
# default to cu129 for torch for now
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true


[tool.ruff]
line-length = 140
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E4",   # ruff defaults, pycodestyle errors
    "E7",   # ^^
    "E9",   # ^^
    "F",    # ruff defaults, pyflakes rules
    "B",    # flake8-bugbear
    "UP",   # pyupgrade rules
    "EXE",  # flake8-executable (checks shebangs)
    "PTH",  # flake8-use-pathlib (checks for os.path usage)
    "S101", # do not use assert
    "S102", # do not use exec/eval
    "NPY",  # numpy rules
    "PD",   # pandas rules
]
ignore = [
    "E501", # line too long (handled by line-length)
    "B905", # zip without explicit strict=
]
unfixable = [
    "B", # flake8-bugbear autofixes can be unsafe, so disable those autofixes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
# overrides for tests
"tests/**" = [
    "D",    # ignore docstring requirements
    "S101", # allow asserts
    "S102", # allow exec/eval
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["noodles"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]


[tool.comfy]
PublisherId = "neggles"
DisplayName = "noodles (by neggles)"
Icon = "https://github.com/neggles/comfy-noodles/raw/refs/heads/main/assets/noodles.png"
Tags = []
requires-comfyui = ">=0.15.0"
includes = ["web/"]


[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = "--no-verify"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "__init__.py"
